// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a loading component if the users list state is loading 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#22282F",
      "flex": 1,
    }
  }
>
  <Loading />
</View>
`;

exports[`renders an empty case component if the list of super heroes is empty 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#22282F",
      "flex": 1,
    }
  }
>
  <EmptyCase />
</View>
`;

exports[`renders the list of super heroes if we are not fetching the info and we have some super heroes to show 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#22282F",
      "flex": 1,
    }
  }
>
  <SuperHeroesList
    onSuperHeroCellTap={[Function]}
    superHeroes={
      Array [
        SuperHero {
          "description": "Scarlet Witch was born at the Wundagore base of the High Evolutionary, she and her twin brother Pietro were the children of Romani couple Django and Marya Maximoff. The High Evolutionary supposedly abducted the twins when they were babies and experimented on them, once he was disgusted with the results, he returned them to Wundagore, disguised as regular mutants.",
          "isAvenger": false,
          "name": "Scarlet Witch",
          "picture": "https://i.annihil.us/u/prod/marvel/i/mg/9/b0/537bc2375dfb9.jpg",
        },
        SuperHero {
          "description": "Wounded, captured and forced to build a weapon by his enemies, billionaire industrialist Tony Stark instead created an advanced suit of armor to save his life and escape captivity. Now with a new outlook on life, Tony uses his money and intelligence to make the world a safer, better place as Iron Man.",
          "isAvenger": true,
          "name": "Iron Man",
          "picture": "https://i.annihil.us/u/prod/marvel/i/mg/c/60/55b6a28ef24fa.jpg",
        },
        SuperHero {
          "description": "Born with super-human senses and the power to heal from almost any wound, Wolverine was captured by a secret Canadian organization and given an unbreakable skeleton and claws. Treated like an animal, it took years for him to control himself. Now, he's a premiere member of both the X-Men and the Avengers.",
          "isAvenger": false,
          "name": "Wolverine",
          "picture": "https://i.annihil.us/u/prod/marvel/i/mg/9/00/537bcb1133fd7.jpg",
        },
      ]
    }
  />
</View>
`;
